<resources>

    <string name="app_name">WordNote</string>
    <string name="add_cat">Создать новую</string>
    <string name="title_activity_main_menu">WordNote</string>
    <string name="run_session">Начать пролистывать слова</string>
    <string name="menu_settings">Настройки</string>
    <string name="dialog_add_cat_text">Создание новой категории</string>
    <string name="dialod_add_cat_edit_text_hint">название</string>
    <string name="dialog_add_word_edit_text_hint_eng">cлово (eng)</string>
    <string name="dialog_add_word_edit_text_hint_rus">перевод (рус)</string>
    <string name="edit_word_list">Редактировать список слов</string>
    <string name="configuration">Настройки</string>
    <string name="about_application">О программе</string>
    <string name="exit_from_application">Выход</string>
    <string name="title_activity_session">ПРОЛИСТЫВАНИЕ</string>
    <string name="show_translation">Показать перевод</string>
    <string name="hide_translation">Скрыть перевод</string>
    <string name="next_word">Следующее слово</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="stub">"? ? ?"</string>
    <string name="path_to_dictionary">/mnt/sdcard/words.txt</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_cat">Выберите категорию</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_edition_mode">Edition mode</string>
    <string name="word_categories">Категории слов</string>
    <string name="word_selected_categories">Выбранные категории</string>

    <string-array name="wordlist_food">
        <item>apple яблоко</item>
        <item>banaba банан</item>
        <item>egg яйцо</item>
        <item>ham ветчина</item>
		<item>lemon лимон</item>
        <item>tea чай</item>
        <item>peach персик</item>
        <item>pear груша</item>
    </string-array>
    <string-array name="wordlist_other">    
        <item>attempt попытка</item>
        <item>brother брат</item>
        <item>coin монета</item>
        <item>color цвет</item>
        <item>dream мечта</item>
        <item>deer олень</item>
        <item>equipment оборудование</item>
        <item>flame пламя</item>
        <item>flower цветок</item>
        <item>game игра</item>
        <item>ghost приведение</item>
        <item>height высота</item>
        <item>inch дюйм</item>
        <item>inspiration вдохновение</item>
        <item>jar банка</item>
        <item>jazz джаз</item>
        <item>kettle чайник</item>
        <item>key ключ</item>
        <item>list список</item>
        <item>mail почта</item>
        <item>murder убийство</item>
        <item>neighbor сосед</item>
        <item>note заметка</item>
        <item>oil масло</item>
        <item>owl сова</item>
        <item>queen королева</item>
        <item>quarter четверть</item>
        <item>rope веревка</item>
        <item>race гонка</item>
        <item>steam пар</item>
        <item>squirrel белка</item>
        <item>temple храм</item>
        <item>union объединение</item>
        <item>utility польза</item>
        <item>violence насилие</item>
        <item>victory победа</item>
        <item>window окно</item>
        <item>widow вдова</item>
        <item>Xmas Рождество</item>
        <item>exception исключение</item>
        <item>yellow желтый</item>
        <item>yard двор</item>
        <item>zero ноль</item>
        <item>zeal рвение</item>
    </string-array>
    <string-array name="wordlist_professions">
        <item>автор author</item>
		<item>агент_бюро_путешествий travel_agent</item>
		<item>адвокат lawyer</item>
		<item>адвокат(защитник)	solicitor</item>
		<item>актер_(актриса) actor_(actress)</item>
		<item>архитектор architect</item>
		<item>бармен barman</item>
		<item>бармен_женщина barmaid</item>
		<item>бизнесмен	businessman</item>
		<item>исполнительный_директор executive</item>
		<item>биолог biologist</item>
		<item>бухгалтер accountant</item>
		<item>ветеринар	vet_(veterinary_surgeon)</item>
		<item>водитель driver</item>
		<item>водопроводчик	plumber</item>
		<item>военнослужащий,_солдат soldier</item>
		<item>врач doctor</item>
		<item>геолог geologist</item>
		<item>государственный_служащий civil_servant</item>
		<item>стоматолог dentist</item>
		<item>дизайнер designer</item>
		<item>оформитель decorator</item>
		<item>управляющий manager</item>
		<item>журналист journalist</item>
		<item>директор_школы headteacher</item>
		<item>инженер engineer</item>
		<item>историк historian</item>
		<item>каменщик bricklayer</item>
		<item>кинорежиссер film_director</item>
		<item>клерк clerk</item>
		<item>кондитер confectioner</item>
		<item>курьер messenger</item>
		<item>лектор lecturer</item>
		<item>летчик pilot</item>
		<item>личный_секретарь personal_assistant</item>
		<item>математик mathematician</item>
		<item>машинист_поезда train_driver</item>
		<item>механик mechanician</item>
		<item>моряк sailor</item>
		<item>музыкант musician</item>
		<item>мусорщик garbageman</item>
		<item>мясник butcher</item>
		<item>няня nurse</item>
		<item>оператор_ПК computer_operator</item>
		<item>официант waiter</item>
		<item>парикмахер hairdresser</item>
		<item>пекарь baker</item>
		<item>писатель writer</item>
		<item>плотник carpenter</item>
		<item>повар cook</item>
		<item>политик politician</item>
		<item>полицейский police_officer</item>
		<item>помощник assistant</item>
		<item>портной tailor</item>
		<item>поэт poet</item>
		<item>преподаватель teacher</item>
		<item>программист programmer</item>
		<item>продавец salesman</item>
		<item>продавщица shop_assistant</item>
		<item>прокурор prosecutor</item>
		<item>промышленник manufacturer</item>
		<item>профессор professor</item>
		<item>редактор editor</item>
		<item>рыбак fisherman</item>
		<item>сапожник shoemaker</item>
		<item>священник priest</item>
		<item>секретарь secretary</item>
		<item>слесарь locksmith</item>
		<item>смотритель caretaker</item>
		<item>тюремщик warder</item>
		<item>строитель builder</item>
		<item>стюардесса flight_attendant</item>
		<item>судья	judge</item>
		<item>типографщик printer</item>
		<item>ткач weaver</item>
		<item>токарь turner</item>
		<item>торговец_рыбой fishmonger</item>
		<item>ученый scientist</item>
		<item>школьный_учитель schoolmaster</item>
		<item>школьная_учительница schoolmistress</item>
		<item>фермер farmer</item>
		<item>физик physicist</item>
		<item>филолог philologist</item>
		<item>фотограф photographer</item>
		<item>химик chemist</item>
		<item>хирург surgeon</item>
		<item>художник artist</item>
		<item>художник painter</item>
		<item>шахтер miner</item>
		<item>швейцар porter</item>
		<item>шеф-повар chef</item>
		<item>экономист economist</item>
		<item>электрик electrician</item>
		<item>ювелир jeweler</item>
		<item>юрист lawyer</item>
    </string-array>
   	<string-array name="wordlist_weather">
   	   <item>лёгкий_ветерок breeze</item>
   	   <item>яркий bright</item>
   	   <item>светлый,_ясный,_безоблачный clear</item>
   	   <item>облако,_туча cloud</item>
   	   <item>облачный cloudy</item>
   	   <item>влажный,_сырой damp</item>
   	   <item>мелкий_дождь drizzle</item>
   	   <item>моросящий drizzly</item>
   	   <item>сухой dry</item>
   	   <item>пасмурный,_хмурый dull</item>
   	   <item>туман fog</item>
   	   <item>туманный foggy</item>
   	   <item>градина hailstone</item>
   	   <item>молния lightning</item>
   	   <item>дождь rain</item>
   	   <item>дождевая_капля raindrop</item>
   	   <item>осадки rainfall</item>
   	   <item>дождливый rainy</item>
   	   <item>ливень shower</item>
   	   <item>дождливый,_проливной showery</item>
   	   <item>снег snow</item>
   	   <item>снегопад snowfall</item>
   	   <item>снежинка snowflake</item>
   	   <item>снежный snowy</item>
   	   <item>буря,_гроза,_ураган,_шторм storm</item>
   	   <item>штормовой stormy</item>
   	   <item>солнце sun</item>
   	   <item>солнечный sunny</item>
   	   <item>солнечный_свет sunshine</item>
   	   <item>гром thunder</item>
   	   <item>мокрый,_влажный wet</item>
   	   <item>ветер wind</item>
   	   <item>ветренный windy</item>
   	    
   	</string-array>

    <string name="title_activity_variants_mode_session">VariantsModeSession</string>

</resources>